--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <div class="container">
         <aside class="sidebar">
             <!-- Sidebar content (pictures) goes here -->
-            <img src="/images/budget.jpeg" alt="Image 1">
-            <img src="/images/fitness.webp" alt="Image 2">
-            <img src="/images/learn.jpeg" alt="Image 1">
-            <img src="/images/math.jpeg" alt="Image 2">
+            <img src="budget.jpeg" alt="Image 1">
+            <img src="fitness.webp" alt="Image 2">
+            <img src="learn.jpeg" alt="Image 1">
+            <img src="math.jpeg" alt="Image 2">
             <!-- More images -->
         </aside>
 
