--- a/ProjectLogin/Main/index.html
+++ b/ProjectLogin/Main/index.html
@@ -16,7 +16,7 @@
       <div class="dropdown">
         <button class="dropbtn"> <i class="fa-solid fa-bars"></i> Modules</button>
         <div class="dropdown-content">
-          <a href="#">Arithmetic Practice</a>
+          <a href="../Math/math.html">Arithmetic Practice</a>
           <a href="#">Fitness Guide</a>
           <a href="#">Financial Guide</a>
           <a href="#">Reading Tracker</a>
