--- a/ProjectLogin/Main/index.html
+++ b/ProjectLogin/Main/index.html
@@ -19,7 +19,7 @@
           <a href="../Math/math.html">Arithmetic Practice</a>
           <a href="#">Fitness Guide</a>
           <a href="#">Financial Guide</a>
-          <a href="#">Reading Tracker</a>
+          <a href="../Reading/index.html">Reading Tracker</a>
         </div>
       </div>
             <div class="welcome-section">
