--- a/ProjectLogin/Main/index.html
+++ b/ProjectLogin/Main/index.html
@@ -32,6 +32,7 @@
       <button type="button" class="icon-button">
         <span class="button__icon">
           <i class="fa-solid fa-user"></i>
+          <strong>Log Out</strong>
         </span>
       </button>
     </header>
