--- a/ProjectLogin/index.html
+++ b/ProjectLogin/index.html
@@ -21,6 +21,7 @@
                 <input type="password" id="password" name="password" required>
             </div>
             <button type="submit">Login</button>
+          <a href="SignUp/index.html"><button type="button">Sign Up</button></a>
         </form>
     </div>
     <script src="script.js"></script>
