--- a/ProjectLogin/Math/math.html
+++ b/ProjectLogin/Math/math.html
@@ -6,41 +6,34 @@
     <link rel="stylesheet" href="math.css">
     <title>Arithmetic Practice</title>
 </head>
-<body style = "background-color: #105165;">
-    <header>
-        <div class="challenge"><strong>CHOOSE YOUR CHALLENGE!!!</strong></div>
-        <nav>
-            <a href="#">
-                <button type="button" class="button" >
-                 <span class="button__icon" >
-                 <ion-icon name="person-outline"></ion-icon>   
-                </button></a>
-            <a href="#">
-                <button type="button" class="home" >
-                <span class="home_icon">
-                <ion-icon name="home-outline"></ion-icon></a>
-        </nav>
-    </header>
-    <div class="container">
-        <div class="Button">
-            <button id="additionBtn"><strong>+</strong></button>  
-            <button id="subtractionBtn"><strong>-</strong></button>
-            <button id="multiplicationBtn"><strong>*</strong></button>
-            <button id="divisionBtn"><strong>/</strong></button>
+<body>
+    <div class="page-container">
+        <header>
+            <div class="challenge"><strong>CHOOSE YOUR CHALLENGE!!!</strong></div>
+            <nav>
+                <button type="button" class="icon-button">
+                    <span class="button__icon">
+                        <i class="fa-solid fa-user"></i>
+                    </span>
+                </button>
+            </nav>
+        </header>
+        <div class="container">
+            <div class="button-container">
+                <button id="additionBtn"><strong>+</strong></button>  
+                <button id="subtractionBtn"><strong>-</strong></button>
+                <button id="multiplicationBtn"><strong>*</strong></button>
+                <button id="divisionBtn"><strong>/</strong></button>
+            </div>
         </div>
-    </div>
-        <div class = "problem-set">
-        <div id="timer">Timer: <span id="minutes">00</span>:<span id="seconds">00</span></div>
-        <div class="problems-container">
-            <!-- Arithmetic problems will be generated here using JavaScript -->
-        </div>
-        <button id="submitBtn">Submit</button>
+        <div class="problem-set">
+            <div id="timer">Timer: <span id="minutes">00</span>:<span id="seconds">00</span></div>
+            <div class="problems-container">
+                <!-- Arithmetic problems will be generated here using JavaScript -->
+            </div>
+            <button id="submitBtn">Submit</button>
         </div>
     </div>
     <script src="math.js"></script>
-    <!-- <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script> -->
 </body>
 </html>
-
-
-
